--- a/factoids.toml
+++ b/factoids.toml
@@ -5,9 +5,9 @@
 "!pills" = "https://nixos.org/nixos/nix-pills"
 "!stuck" = "https://howoldis.herokuapp.com/"
 "!doesanyoneuse" = "Don't ask if anyone uses software xyz, just ask your specific question. This helps solve your problem quicker, and allows people who haven't used xyz but may still be able to help you to do so."
-"!library" = "Don't install libraries through nix-env or systemPackages. See https://nixos.wiki/wiki/FAQ/Libraries for details."
-"!-A" = "You'll usually want to use nix-env -i with -A. It's faster and more precise. See https://nixos.wiki/wiki/FAQ/nix-env_-iA for details."
+"!library" = "Don't install libraries through nix-env or systemPackages. See https://wiki.nixos.org/wiki/FAQ/Libraries for details."
+"!-A" = "You'll usually want to use nix-env -i with -A. It's faster and more precise. See https://wiki.nixos.org/wiki/FAQ/nix-env_-iA for details."
 "!tofu" = "To get a sha256 hash of a new source, you can use the Trust On First Use model: use probably-wrong hash (for example: 0000000000000000000000000000000000000000000000000000) then replace it with the correct hash Nix expected."
-"!unfree" = "You cannot install your unfree software? See https://nixos.wiki/wiki/FAQ/unfree"
-"!notfound" = "nix-env -qaP does not show the package you are looking for but you are sure it should be there? Check out https://nixos.wiki/wiki/FAQ/notfound" 
-"!stateVersion" = "Do not update `system.stateVersion`. See https://nixos.wiki/wiki/FAQ/stateVersion for details."
+"!unfree" = "You cannot install your unfree software? See https://wiki.nixos.org/wiki/FAQ/unfree"
+"!notfound" = "nix-env -qaP does not show the package you are looking for but you are sure it should be there? Check out https://wiki.nixos.org/wiki/FAQ/notfound"
+"!stateVersion" = "Do not update `system.stateVersion`. See https://wiki.nixos.org/wiki/FAQ/stateVersion for details."
